test/test-cases/negative/id_errors.pas
Program id_errors(input, output);
Const
  a = bbb sad;
Var
  x, y: integer;
Begin
  x := 3 +;
  read(r, y)
End.
